--- a/less/navigation.less
+++ b/less/navigation.less
@@ -4,6 +4,7 @@
   background: @main-bg;
   border-bottom: 2px dashed @navigation-border;
   position: fixed;
+  color: black !important;
 
   .nav-container {
     height: 100%;
